--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -1,11 +1,34 @@
 spec:
   name: sample-nodejs-kafka
+  envs:
+    - scope: RUN_TIME
+      type: GENERAL
+      key: KAFKA_BROKER
+      value: TODO
+    - scope: RUN_TIME
+      type: GENERAL
+      key: KAFKA_TOPIC
+      value: TODO
+    - scope: RUN_TIME
+      type: GENERAL
+      key: KAFKA_USERNAME
+      value: TODO
+    - scope: RUN_TIME
+      type: GENERAL
+      key: KAFKA_PASSWORD
+      value: TODO
+    - scope: RUN_TIME
+      type: GENERAL
+      key: KAFKA_CA_CERT
+      value: |
+        TODO
   services:
   - name: producer
     source_dir: producer
     git:
       branch: main
       repo_clone_url: https://github.com/blesswinsamuel/sample-nodejs-kafka.git
+  workers:
   - name: consumer
     source_dir: consumer
     git:
